Updated Travis File

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,6 @@ before_install:
     - docker build -t jconnro/Docker-React -f Dockerfile.dev .
 
 script:
-     - docker run -e CI=true USERNAME/docker-react npm run test
+     - docker run -e CI=true JConnrO/Docker-React npm run test
+
       
