--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ before_install:
     - docker build -t jconnro/docker-react -f Dockerfile.dev .
 
 script:
-     - docker run -e CI=true jconnro/docker-react npm run test
+     - docker run -e CI=true jconnro/docker-react npm run test -- --coverage
 
       
