--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,12 @@ script:
   - docker run -e CI=true stephengrider/docker-react npm run test
 
 deploy:
-  provider: elasticbeanstalk
+  provider: elasticbeanstalk,
   region: "us-east-2"
-  app: "docker-react"
-  env: "docker-env"
+  app: "DockerReact"
+  env: "DockerReact-env"
   bucket_name: "elasticbeanstalk-us-east-2-387834806947"
-  bucket_path: "docker-react"
+  bucket_path: "DockerReact"
   on:
     branch: master
   access_key_id: $AWS_ACCESS_KEY
