--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ script:
   - docker run -e CI=true stephengrider/docker-react npm run test
 
 deploy:
-  provider: elasticbeanstalk,
+  provider: elasticbeanstalk
   region: "us-east-2"
   app: "docker-react"
   env: "DockerReact-env"
